TST-80 Fixed the nav links being wrapped on smaller screens
- Changed flex-wrap from wrap to nowrap in desktop
- Adjusted the max-width of top-header-links

--- a/assets/scss/custom/layout/_header.scss
+++ b/assets/scss/custom/layout/_header.scss
@@ -241,7 +241,7 @@
         .header-top-links {
             display: flex;
             justify-content: flex-end;
-            max-width: 150px;
+            max-width: 115px;
             width: 100%;
             color: $text-gray;
             .headertoplinks-consult {
