--- a/assets/scss/custom/layout/_nav-pages.scss
+++ b/assets/scss/custom/layout/_nav-pages.scss
@@ -131,6 +131,7 @@
                             align-items:center;
                             flex-direction:row;
                             justify-content:flex-end;
+                            flex-wrap:nowrap;
                             .navPages-item {
                                 &.navPages-item-shop {
                                     order:1;
